DERBY-6945: Make it possible to run the derbyall suite under the old test harness with a module path; commit derby-6945-50-aa-runOldTestHarnessWithModulePath.diff.
git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@1839969 13f79535-47bb-0310-9956-ffa450edef68